<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forget"
            type="com.example.expensetrackerapplication.viewmodel.ForgetViewModel" />
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_prompt"
            android:elevation="10dp">

            <TextView
                android:id="@+id/idHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/sub_header_size"
                android:textStyle="bold"
                android:text="@string/forget_password"
                android:textColor="?attr/colorPrimary"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idLEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeErrorColor="?attr/errorBackground"
                app:hintTextColor="?attr/colorPrimary"
                app:cursorColor="?attr/colorPrimary"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idHeader"
                android:layout_margin="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size"
                    android:text="@={forget._email}"
                    android:nextFocusDown="@id/idENewPassword"
                    android:paddingStart="50dp"/>
                <requestFocus/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idLNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeErrorColor="?attr/errorBackground"
                app:hintTextColor="?attr/colorPrimary"
                app:cursorColor="?attr/colorPrimary"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idLEmail"
                android:layout_margin="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idENewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size"
                    android:maxLength="6"
                    android:text="@={forget._newPassword}"
                    android:nextFocusDown="@id/idBtnReset"
                    android:paddingStart="50dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/idPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_least_6_characters"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/hint_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idLNewPassword"
                />

            <LinearLayout
                android:id="@+id/idBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idPasswordHint">
                <ImageView
                    android:id="@+id/idClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/clear_text_icon"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{()->forget.fnClearAllFields()}"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/idBtnCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorPrimary"
                    android:textColorLink="?attr/colorPrimary"
                    android:onClick="@{() -> forget.onClickCancel()}"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/idBtnReset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/reset"
                    android:onClick="@{() -> forget.onClickReset()}"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_background"
                    app:backgroundTint="?attr/colorPrimary"
                    app:cornerRadius="20dp"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
<!--    </androidx.cardview.widget.CardView>-->
</layout>