<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.expensetrackerapplication.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.Childs.SignUp">


        <androidx.cardview.widget.CardView
            android:id="@+id/isExportLoading"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:layout_margin="20dp"
                android:indeterminateTint="?attr/colorPrimary"
                android:indeterminateTintMode="src_in"
                />
        </androidx.cardview.widget.CardView>

        <ImageView
        android:id="@+id/loginimage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/loginimage"
        app:layout_constraintBottom_toTopOf="@+id/loginlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/loginlayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginimage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            >
            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/app_header_size"
                android:textColorLink="?attr/colorPrimary" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <!--            <Spinner-->
            <!--                android:id="@+id/selectlanguage"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"/>-->


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/user"
                app:cursorColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:hintTextColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="text"
                    android:nextFocusDown="@id/idMobileNo"
                    android:hint="@string/username"
                    android:text="@={signUpViewModel._name}"
                    android:textSize="@dimen/text_size"
                    >


                </com.google.android.material.textfield.TextInputEditText>
                <requestFocus />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/call"
                app:cursorColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:hintTextColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idMobileNo"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@={signUpViewModel._mobileNo}"
                    android:nextFocusDown="@id/idEmail"
                    android:layout_height="match_parent"
                    android:hint="@string/mobileno"
                    android:textSize="@dimen/text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email"
                app:cursorColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:hintTextColor="?attr/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:text="@={signUpViewModel._email}"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/idPassword"
                    android:textSize="@dimen/text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/lock"
                app:cursorColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:hintTextColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:text="@={signUpViewModel._password}"
                    android:nextFocusDown="@id/idSignUp"
                    android:hint="@string/password"
                    android:textSize="@dimen/text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_least_6_characters"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/hint_size"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                android:id="@+id/idLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idCancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:onClick="@{() -> signUpViewModel.fnClearAllFields()}"
                    android:textColor="?attr/colorPrimary"
                    android:textColorLink="?attr/colorPrimary"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/idSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:textColor="@color/text_color_white"
                    android:onClick="@{() -> signUpViewModel.clickSignupButton()}"
                    android:background="@drawable/btn_background"
                    android:text= "@string/signup"
                    android:textSize="@dimen/button_text_size"
                    />
                <!--                <ImageView-->
                <!--                    android:id="@+id/nextButton"-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="100dp"-->
                <!--                    android:layout_gravity="end"-->
                <!--                    android:background="@drawable/btn_background"-->
                <!--                    android:padding="12dp"-->
                <!--                    android:src="@drawable/arrow_forward"-->
                <!--                    android:contentDescription="@string/next"-->
                <!--                    app:tint="@color/white" />-->

            </LinearLayout>
<!--            <TextView-->
<!--                android:id="@+id/signup"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/signup"-->
<!--                android:textColor="?attr/colorPrimary"-->
<!--                android:textColorLink="?attr/colorPrimary"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="normal" />-->
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/idGoToLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:onClick="@{() -> signUpViewModel.fnNavigateToLogin()}"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center"
                android:textSize="@dimen/button_text_size"
                android:text="@string/alreadyaccount" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>